--- a/paper/sparsians.tex
+++ b/paper/sparsians.tex
@@ -419,17 +419,20 @@ seeding.
 &&\multicolumn{7}{c}{without attribute pairs} & \multicolumn{7}{c}{with attribute pairs} \\
 \midrule
     1A	&	offic	&	8.58	&	18.0	&	13.0	&	8.89	&	8.23	&	7.91	&	8.95	&	19.44	&	14.93	&	9.28	&	8.63	&	8.13	\\
-    1A	&	reprd	&9.07&18.7	&13.5	&9.41&8.77&8.45&009.17	&19.9	&14.9	&9.47	&8.73	&8.36		\\
+    1A	&	reprd	&9.07&18.7	&13.5	&9.41&8.77&8.45& 9.17	&19.9	&14.9	
+    &9.47	&8.73	&8.36		\\
     1B	&	offic	&	9.36	&	19.94	&	13.2	&	9.45	&	9.32	&	8.81	&12.08	& 25.14	&	17.6	&	12.92	&	11.73	&	11.2	\\
-    1B	&	reprd	&9.16&19.5	&12.8	&8.93&8.94&8.74&012.8	&26.7	&18.9	&13.6	&12.4	&11.9	\\
+    1B	&	reprd	&9.16&19.5	&12.8	&8.93&8.94&8.74&12.8	&26.7	&18.9	
+    &13.6	&12.4	&11.9	\\
     1C	&	offic	&	12.52	&	25.87	&	16.6	&	13.58	&	12.59	&	11.48	&17.94	&	37.56	&	27.8	&	19.72	&	17.06	&	16.28	\\
-    1C	&	reprd	&12.9	&26.	& 16.2	&13.9	&13.	&11.9	&018.3	
+    1C	&	reprd	&12.9	&26.	& 16.2	&13.9	&13.	&11.9	& 18.3	
     &38.4	&28.5	&20.2	&17.4	& 16.6	\\
     2A	&	offic	&	14.96	&	32.18	&	24.8	&	17.73	&	15.81	&	11.6	&20.75	&	40.6	&	31.6	&	23.5	&	21.43	&	17.05	\\
-    2A	&	reprd	&15.1	&32.4	& 24.4	&18.	&16.2	&11.8	&021.5	
+    2A	&	reprd	&15.1	&32.4	& 24.4	&18.	&16.2	&11.8	&21.5	
     &43.7	&35.6	&25.3	&21.8	&17.	\\
     2B	&	offic	&	19.08	&	36.71	&	27.2	&	22.97	&	20.13	&	15.44	&29.54	&	46.43	&	33.0	&	31.9	&	28.86	&	27.69	\\
-    2B	&	reprd	&21.5	&40.9	&29.6	&25.6	&22.1	&18.	&030.4	&46.8	&33.8	&31.8	&29.5	&28.9	\\
+    2B	&	reprd	&21.5	&40.9	&29.6	&25.6	&22.1	&18.	&30.4	
+    &46.8	&33.8	&31.8	&29.5	&28.9	\\
     \bottomrule
   \end{tabular}
   %}
