--- a/paper/sparsians.tex
+++ b/paper/sparsians.tex
@@ -407,29 +407,40 @@ The randomness introduced by negative sampling is now factored out by random
 seeding. 
 
 \begin{table*}
-%\resizebox{\textwidth}{!}{%
-  \begin{tabular}{cc|ccccccc|ccccccc}
-    \toprule
-&&\multicolumn{7}{c}{without attribute pairs} & \multicolumn{7}{c}{with attribute pairs} \\
+\resizebox{\textwidth}{!}{%
+  \begin{tabular}{cc|cccccc|cccccc}
+	& & \multicolumn{6}{c|}{without attribute pairs} & 	
+\multicolumn{6}{c}{with attribute pairs}\\
+\toprule
+& &     MAP &    MRR &    P@1 &     P@3 &    P@5 &    P@15 & 	MAP 
+&    MRR &    P@1 &    P@3 &   P@5 &   P@15 \\
 \midrule
-    1A	&	offic	&	8.58	&	18.0	&	13.0	&	8.89	&	8.23	&	7.91	&	8.95	&	19.44	&	14.93	&	9.28	&	8.63	&	8.13	\\
-    1A	&	reprd	&9.07&18.7	&13.5	&9.41&8.77&8.45& 9.17	&19.9	&14.9	
-    &9.47	&8.73	&8.36		\\
-    1B	&	offic	&	9.36	&	19.94	&	13.2	&	9.45	&	9.32	&	8.81	&12.08	& 25.14	&	17.6	&	12.92	&	11.73	&	11.2	\\
-    1B	&	reprd	&9.16&19.5	&12.8	&8.93&8.94&8.74&12.8	&26.7	&18.9	
-    &13.6	&12.4	&11.9	\\
-    1C	&	offic	&	12.52	&	25.87	&	16.6	&	13.58	&	12.59	&	11.48	&17.94	&	37.56	&	27.8	&	19.72	&	17.06	&	16.28	\\
-    1C	&	reprd	&12.9	&26.	& 16.2	&13.9	&13.	&11.9	& 18.3	
-    &38.4	&28.5	&20.2	&17.4	& 16.6	\\
-    2A	&	offic	&	14.96	&	32.18	&	24.8	&	17.73	&	15.81	&	11.6	&20.75	&	40.6	&	31.6	&	23.5	&	21.43	&	17.05	\\
-    2A	&	reprd	&15.1	&32.4	& 24.4	&18.	&16.2	&11.8	&21.5	
-    &43.7	&35.6	&25.3	&21.8	&17.	\\
-    2B	&	offic	&	19.08	&	36.71	&	27.2	&	22.97	&	20.13	&	15.44	&29.54	&	46.43	&	33.0	&	31.9	&	28.86	&	27.69	\\
-    2B	&	reprd	&21.5	&40.9	&29.6	&25.6	&22.1	&18.	&30.4	
+    1A	&	offic	&	8.6	&	18.0	&	13.0	&	8.9	&	8.2	&	7.9	&	
+    8.9	&	19.4	&	14.9	&	9.3	&	8.6	&	8.1	\\
+    1A	&	reprd	& 9.07 &18.7 &13.5	& 9.4 & 8.8 & 8.5 & 9.2	& 19.9	& 14.9	
+    & 9.5	& 8.7	& 8.4	\\
+    1B	&	offic	&	9.4	&	19.9	&	13.2	&	9.5	&	9.3	&	8.8	& 
+    12.1	& 25.1	&	17.6	&	12.9	&	11.7	&	11.2	\\
+    1B	&	reprd	& 9.2 & 19.5 & 12.8 & 8.9 & 8.9 & 8.7 & 12.8	& 26.7	& 
+    18.9 & 13.6	& 12.4 & 11.9 \\
+    1C	&	offic	&	12.5	&	25.9	&	16.6	&	13.6	&	12.6	
+    &	11.5	& 17.9	&	37.6	&	27.8	&	19.7	&	17.1	&	
+    16.3	\\
+    1C	&	reprd	& 12.9	& 26.0	& 16.2	& 13.9	& 13.0	& 11.9	& 18.3	
+    & 38.4	& 28.5	& 20.2	& 17.4	& 16.6	\\
+    2A	&	offic	&	15.0	&	32.2	&	24.8	&	17.7	&	15.8	
+    &	11.6	& 20.8	&	40.6	&	31.6	&	23.5	&	21.4	&	
+    17.1	\\
+    2A	&	reprd	&15.1	&32.4	& 24.4	&18.0	&16.2	&11.8	&21.5	
+    &43.7	&35.6	&25.3	&21.8	&17.0	\\
+    2B	&	offic	&	19.1	&	36.7	&	27.2	&	23.0	&	20.1	
+    &	15.4	&29.5	&	46.4	&	33.0	&	31.9	&	28.9	&	
+    27.7	\\
+    2B	&	reprd	&21.5	&40.9	&29.6	&25.6	&22.1	&18.0	&30.4	
     &46.8	&33.8	&31.8	&29.5	&28.9	\\
     \bottomrule
   \end{tabular}
-  %}
+ }
   \caption{Our submissions results.}
   \label{table:submissions}
 \end{table*}
@@ -514,27 +525,9 @@ After the evaluation closed, we conducted ablation experiments, see
 tried more settings including longer, 1000-dimensional sparse vectors, see
 \autoref{table:1A_detailed}.
 
-\begin{table}
-  % TODO tabular-ok sorrendje
-	% ez kéne az első post eval mérés legyen (a reprodukálós tábla után)
-	% itt még minden olyan, mint a submissionben, csak:
-	%    -  az is_frequent_hypernym már javítva lett
-	%    -  és az att_pair/fca ki/be lett kapcsolgatva
-	\centering
-	\resizebox{.5\textwidth}{!}{
-    % TODO textbf
-	\begin{tabular}{r|cccccc}
-att-pairs/fca & MAP & MRR & P@1 & P@3 & P@5 & P@15 \\ \hline
-off/off & 10.3 & 21.3 & 15.0 & 10.6 & 10.1 & 9.6  \\
-off/on  & 10.1 & 21.1 & 14.9 & 10.5 & 9.9  & 9.5  \\
-on/off  & 12.1 & 25.4 & 18.9 & 12.9 & 11.6 & 10.9 \\
-on/on   & 12.1 & 25.3 & 18.7 & 13.0 & 11.6 & 11.0 \\
-	\end{tabular}
-	}
-\caption{Ablation experiments on the 1A dataset with $k=200,ns=50$ (and the 
-implementation of the is\_frequent\_hypernym fixed).}
-\label{table:ablation1A}
-\end{table}
+\input{ablation1A}
+
+\input{post_eval}
 
 \input{big_table}
 % tabular 6 winner TODO
