--- a/paper/sparsians.tex
+++ b/paper/sparsians.tex
@@ -19,6 +19,7 @@
 \usepackage{booktabs}
 \usepackage{graphicx}
 \usepackage{verbatim}
+\usepackage{subfig}
 
 \aclfinalcopy % Uncomment this line for all SemEval submissions
 
@@ -60,6 +61,8 @@ Department of Informatics \\ University of Szeged \\
   \emph{(1B) Italian} (\emph{all} and \emph{entities}),
   \emph{(1C) Spanish entities}, and
   \emph{(2B) music entities}.
+  Our source code in available 
+  online\footnote{\url{https://github.com/begab/fca_hypernymy}}.
 \end{abstract}
 
 
@@ -143,8 +146,7 @@ in the two categories and in overall as well, thus resulting in 15
 combinations.
 Our system took first place in the music entities subtasks (2B).
 % TODO Spanish
-Detailed results for our system appear in \autoref{sec:results}.
-Our source code in available online\footnote{\url{https://github.com/begab/fca_hypernymy}}.
+%Detailed results for our system appear in \autoref{sec:results}.
 
 % Here we illustrate the effectiveness of sparse coding derived word
 % representations in the task of hypernymy extraction.
@@ -350,6 +352,8 @@ We will see in post-evaluation ablation experiments, where we refer to the
 above three features as the \emph{FCA} features, that they were not useful in
 our submissions.
 
+\input{our_submissions}
+
 \texttt{attributePair}$_{ij}$ above are indicator features for every possible
 \emph{interaction term}
 % esetleg a jelentőségét itt is kiemelni
@@ -390,45 +394,6 @@ general concepts and more general hypernymy relations potentially tend to be
 more easily detectable than more specialized ones.
 
 \section{Results} \label{sec:results}
-
-\begin{table*}
-\resizebox{\textwidth}{!}{%
-  \begin{tabular}{cc|cccccc|cccccc}
-	& & \multicolumn{6}{c|}{without attribute pairs} & 	
-\multicolumn{6}{c}{with attribute pairs}\\
-\toprule
-& &     MAP &    MRR &    P@1 &     P@3 &    P@5 &    P@15 & 	MAP 
-&    MRR &    P@1 &    P@3 &   P@5 &   P@15 \\
-\midrule
-    1A	&	offic	&	8.6	&	18.0	&	13.0	&	8.9	&	8.2	&	7.9	&	
-    8.9	&	19.4	&	14.9	&	9.3	&	8.6	&	8.1	\\
-    1A	&	reprd	& 9.07 &18.7 &13.5	& 9.4 & 8.8 & 8.5 & 9.2	& 19.9	& 14.9	
-    & 9.5	& 8.7	& 8.4	\\
-    1B	&	offic	&	9.4	&	19.9	&	13.2	&	9.5	&	9.3	&	8.8	& 
-    12.1	& 25.1	&	17.6	&	12.9	&	11.7	&	11.2	\\
-    1B	&	reprd	& 9.2 & 19.5 & 12.8 & 8.9 & 8.9 & 8.7 & 12.8	& 26.7	& 
-    18.9 & 13.6	& 12.4 & 11.9 \\
-    1C	&	offic	&	12.5	&	25.9	&	16.6	&	13.6	&	12.6	
-    &	11.5	& 17.9	&	37.6	&	27.8	&	19.7	&	17.1	&	
-    16.3	\\
-    1C	&	reprd	& 12.9	& 26.0	& 16.2	& 13.9	& 13.0	& 11.9	& 18.3	
-    & 38.4	& 28.5	& 20.2	& 17.4	& 16.6	\\
-    2A	&	offic	&	15.0	&	32.2	&	24.8	&	17.7	&	15.8	
-    &	11.6	& 20.8	&	40.6	&	31.6	&	23.5	&	21.4	&	
-    17.1	\\
-    2A	&	reprd	&15.1	&32.4	& 24.4	&18.0	&16.2	&11.8	&21.5	
-    &43.7	&35.6	&25.3	&21.8	&17.0	\\
-    2B	&	offic	&	19.1	&	36.7	&	27.2	&	23.0	&	20.1	
-    &	15.4	&29.5	&	46.4	&	33.0	&	31.9	&	28.9	&	
-    27.7	\\
-    2B	&	reprd	&21.5	&40.9	&29.6	&25.6	&22.1	&18.0	&30.4	
-    &46.8	&33.8	&31.8	&29.5	&28.9	\\
-    \bottomrule
-  \end{tabular}
- }
-  \caption{Our submissions results.}
-  \label{table:submissions}
-\end{table*}
 
 \subsection{Our submissions}
 
